enhance intent resolution and schema handling; add support for schema-driven intents and improve response scoring