@@ -11,17 +11,22 @@ import com.github.salilvnair.convengine.engine.pipeline.annotation.MustRunAfter;
 import com.github.salilvnair.convengine.engine.pipeline.annotation.RequiresConversationPersisted;
 import com.github.salilvnair.convengine.engine.response.type.factory.ResponseTypeResolverFactory;
 import com.github.salilvnair.convengine.engine.session.EngineSession;
+import com.github.salilvnair.convengine.engine.type.ResponseType;
+import com.github.salilvnair.convengine.entity.CePromptTemplate;
 import com.github.salilvnair.convengine.entity.CeResponse;
+import com.github.salilvnair.convengine.intent.AgentIntentResolver;
+import com.github.salilvnair.convengine.intent.AgentIntentCollisionResolver;
 import com.github.salilvnair.convengine.model.JsonPayload;
+import com.github.salilvnair.convengine.model.PromptTemplate;
+import com.github.salilvnair.convengine.model.ResponseTemplate;
 import com.github.salilvnair.convengine.model.TextPayload;
+import com.github.salilvnair.convengine.repo.PromptTemplateRepository;
 import com.github.salilvnair.convengine.repo.ResponseRepository;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Component;
 
-import java.util.LinkedHashMap;
-import java.util.List;
-import java.util.Map;
-import java.util.Optional;
+import java.util.*;
+import java.util.stream.Collectors;
 
 @RequiredArgsConstructor
 @Component
@@ -30,12 +35,27 @@ import java.util.Optional;
 public class ResponseResolutionStep implements EngineStep {
 
     private final ResponseRepository responseRepo;
+    private final PromptTemplateRepository promptRepo;
     private final ResponseTypeResolverFactory typeFactory;
     private final AuditService audit;
     private final ConversationHistoryProvider historyProvider;
+    private final AgentIntentCollisionResolver agentIntentCollisionResolver;
 
     @Override
     public StepResult execute(EngineSession session) {
+
+        if(AgentIntentResolver.INTENT_COLLISION_STATE.equals(session.getState())) {
+            Map<String, Object> payload = new LinkedHashMap<>();
+            payload.put("intent", session.getIntent());
+            payload.put("state", session.getState());
+            audit.audit(
+                    "INTENT_COLLISION_DETECTED",
+                    session.getConversationId(),
+                    payload
+            );
+            agentIntentCollisionResolver.resolve(session);
+            return new StepResult.Continue();
+        }
 
         Optional<CeResponse> responseOptional = resolveResponse(session);
 
@@ -69,14 +89,32 @@ public class ResponseResolutionStep implements EngineStep {
         );
         List<ConversationTurn> conversationTurns = historyProvider.lastTurns(session.getConversationId(), 10);
         session.setConversationHistory(conversationTurns);
+
+
+
+        CePromptTemplate template = null;
+        if(ResponseType.DERIVED.name().equalsIgnoreCase(resp.getResponseType())) {
+            template = promptRepo.findAll().stream()
+                    .filter(t -> Boolean.TRUE.equals(t.getEnabled()))
+                    .filter(t -> resp.getOutputFormat().equalsIgnoreCase(t.getResponseType()))
+                    .filter(t -> matchesOrNull(t.getIntentCode(), session.getIntent()))
+                    .filter(t -> matchesOrNull(t.getStateCode(), session.getState()) || matches(t.getStateCode(), "ANY"))
+                    .max(Comparator.comparingInt(t -> score(t, session)))
+                    .orElseThrow(() ->
+                            new IllegalStateException(
+                                    "No ce_prompt_template found for response_type=" +
+                                            resp.getOutputFormat() + ", intent=" + session.getIntent() + ", state=" + session.getState()
+                            )
+                    );
+        }
         typeFactory
                 .get(resp.getResponseType())
-                .resolve(session, resp);
+                .resolve(session, PromptTemplate.initFrom(template), ResponseTemplate.initFrom(resp));
 
         Object payloadValue = switch (session.getPayload()) {
             case TextPayload(String text) -> text;
             case JsonPayload(String json) -> json;
-            case null, default -> null;
+            case null -> null;
         };
 
         Map<String, Object> outputPayload = new LinkedHashMap<>();
@@ -98,14 +136,14 @@ public class ResponseResolutionStep implements EngineStep {
                 .filter(CeResponse::isEnabled)
                 .filter(r -> matches(r.getIntentCode(), session.getIntent()) || r.getIntentCode() == null)
                 .filter(r -> matches(r.getStateCode(), session.getState()) || matches(r.getStateCode(), "ANY"))
-                .toList();
+                .collect(Collectors.toList());
 
         if (candidates.isEmpty()) {
             return Optional.empty();
         }
 
         candidates.sort((a, b) -> Integer.compare(responseScore(b, session), responseScore(a, session)));
-        return Optional.ofNullable(candidates.get(0));
+        return Optional.ofNullable(candidates.getFirst());
     }
 
     private boolean matches(String left, String right) {
@@ -122,5 +160,17 @@ public class ResponseResolutionStep implements EngineStep {
         int anyIntent = response.getIntentCode() == null ? 1 : 0;
         int priority = response.getPriority() == null ? 999999 : response.getPriority();
         return (exactState * 1000) + (exactIntent * 100) + (anyState * 10) + anyIntent - priority;
+    }
+
+    private boolean matchesOrNull(String left, String right) {
+        return left == null || matches(left, right);
+    }
+
+    private int score(CePromptTemplate template, EngineSession session) {
+        int intentScore = matches(template.getIntentCode(), session.getIntent()) ? 2 : 1;
+        int stateScore = matches(template.getStateCode(), session.getState())
+                ? 2
+                : (matches(template.getStateCode(), "ANY") ? 1 : 0);
+        return (intentScore * 10) + (stateScore * 5);
     }
 }
